Add BaseFactory class.

--- a/nbs/builders/scales.ipynb
+++ b/nbs/builders/scales.ipynb
@@ -44,7 +44,7 @@
     "from cjm_fasthtml_tailwind.core.base import (\n",
     "    NamedScale, CONTAINER_SCALES, TailwindScale, \n",
     "    BaseUtility, StandardUtility, DirectionalUtility,\n",
-    "    UtilityFactory, is_numeric_scale\n",
+    "    UtilityFactory, is_numeric_scale, BaseFactory\n",
     ")"
    ]
   },
@@ -227,11 +227,12 @@
     "    def __init__(\n",
     "        self, \n",
     "        prefix: str,  # The utility prefix (e.g., 'w', 'h', 'p')\n",
-    "        config: ScaleConfig  # Configuration defining valid scales and values\n",
+    "        config: ScaleConfig,  # Configuration defining valid scales and values\n",
+    "        doc: Optional[str] = None  # Optional documentation string\n",
     "    ):\n",
     "        \"\"\"Initialize with prefix and scale configuration.\"\"\"\n",
     "        self.config = config\n",
-    "        super().__init__(ScaledUtility, prefix)\n",
+    "        super().__init__(ScaledUtility, prefix, doc)\n",
     "    \n",
     "    def __call__(\n",
     "        self, \n",
@@ -365,25 +366,28 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class DirectionalScaledFactory:\n",
+    "class DirectionalScaledFactory(BaseFactory):\n",
     "    \"\"\"Factory for creating directional scaled utilities.\"\"\"\n",
     "    \n",
     "    def __init__(\n",
     "        self, \n",
     "        prefix: str,  # The base utility prefix (e.g., 'p' for padding, 'm' for margin)\n",
-    "        config: ScaleConfig  # Configuration defining valid scales and values\n",
+    "        config: ScaleConfig,  # Configuration defining valid scales and values\n",
+    "        doc: Optional[str] = None  # Optional documentation string\n",
     "    ):\n",
     "        \"\"\"Initialize with prefix and scale configuration.\"\"\"\n",
+    "        doc = doc or f\"Factory for {prefix} utilities with directional variants\"\n",
+    "        super().__init__(doc)\n",
     "        self.prefix = prefix\n",
     "        self.config = config\n",
     "        \n",
     "        # Create direction-specific factories\n",
-    "        self.t = ScaledFactory(f\"{prefix}t\", config)  # top\n",
-    "        self.r = ScaledFactory(f\"{prefix}r\", config)  # right\n",
-    "        self.b = ScaledFactory(f\"{prefix}b\", config)  # bottom\n",
-    "        self.l = ScaledFactory(f\"{prefix}l\", config)  # left\n",
-    "        self.x = ScaledFactory(f\"{prefix}x\", config)  # horizontal\n",
-    "        self.y = ScaledFactory(f\"{prefix}y\", config)  # vertical\n",
+    "        self.t = ScaledFactory(f\"{prefix}t\", config, f\"Top {prefix} utilities\")  # top\n",
+    "        self.r = ScaledFactory(f\"{prefix}r\", config, f\"Right {prefix} utilities\")  # right\n",
+    "        self.b = ScaledFactory(f\"{prefix}b\", config, f\"Bottom {prefix} utilities\")  # bottom\n",
+    "        self.l = ScaledFactory(f\"{prefix}l\", config, f\"Left {prefix} utilities\")  # left\n",
+    "        self.x = ScaledFactory(f\"{prefix}x\", config, f\"Horizontal {prefix} utilities\")  # horizontal\n",
+    "        self.y = ScaledFactory(f\"{prefix}y\", config, f\"Vertical {prefix} utilities\")  # vertical\n",
     "    \n",
     "    def __call__(\n",
     "        self, \n",
@@ -391,7 +395,7 @@
     "        negative: bool = False  # Whether to create a negative variant\n",
     "    ) -> ScaledUtility:  # A new scaled utility for all directions\n",
     "        \"\"\"Create a utility instance for all directions.\"\"\"\n",
-    "        return ScaledFactory(self.prefix, self.config)(value, negative)\n",
+    "        return ScaledFactory(self.prefix, self.config, f\"All sides {self.prefix} utilities\")(value, negative)\n",
     "    \n",
     "    def __getattr__(\n",
     "        self,\n",
@@ -688,7 +692,7 @@
      "output_type": "stream",
      "text": [
       "Generated fractions:\n",
-      "['1/12', '2/12', '1/6', '1/5', '3/12', '1/4', '4/12', '1/3', '2/6', '2/5', '5/12', '2/4', '3/6', '6/12', '1/2', '7/12', '3/5', '8/12', '4/6', '2/3', '3/4', '9/12', '4/5', '10/12', '5/6', '11/12']\n"
+      "['1/12', '1/6', '2/12', '1/5', '1/4', '3/12', '1/3', '4/12', '2/6', '2/5', '5/12', '6/12', '3/6', '1/2', '2/4', '7/12', '3/5', '4/6', '8/12', '2/3', '9/12', '3/4', '4/5', '10/12', '5/6', '11/12']\n"
      ]
     }
    ],
@@ -841,14 +845,17 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class SimpleFactory:\n",
+    "class SimpleFactory(BaseFactory):\n",
     "    \"\"\"Factory for utilities that are simple string values.\"\"\"\n",
     "    \n",
     "    def __init__(\n",
     "        self,\n",
-    "        values_dict: Dict[str, str]  # Dictionary mapping attribute names to CSS values\n",
+    "        values_dict: Dict[str, str],  # Dictionary mapping attribute names to CSS values\n",
+    "        doc: Optional[str] = None  # Optional documentation string\n",
     "    ):\n",
     "        \"Initialize with a dictionary of values.\"\n",
+    "        doc = doc or \"Factory for simple utility values\"\n",
+    "        super().__init__(doc)\n",
     "        self._values = values_dict\n",
     "    \n",
     "    def __getattr__(\n",
