--- a/nbs/core/base.ipynb
+++ b/nbs/core/base.ipynb
@@ -435,6 +435,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39a31663-7274-4f05-b345-d37adb5b4a83",
+   "metadata": {},
+   "source": [
+    "## Base Factory with Documentation\n",
+    "\n",
+    "A base factory class that all factories inherit from, providing documentation support:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ivw2frqazb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class BaseFactory(ABC):\n",
+    "    \"\"\"Base factory class with documentation support.\"\"\"\n",
+    "    \n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        doc: str  # Documentation string describing what this factory creates\n",
+    "    ):\n",
+    "        \"\"\"Initialize with documentation string.\"\"\"\n",
+    "        self._doc = doc\n",
+    "    \n",
+    "    @property\n",
+    "    def __doc__(\n",
+    "        self\n",
+    "    ) -> str:  # The documentation string\n",
+    "        \"\"\"Return the documentation for this factory.\"\"\"\n",
+    "        return self._doc\n",
+    "    \n",
+    "    def describe(\n",
+    "        self\n",
+    "    ) -> str:  # A formatted description of the factory\n",
+    "        \"\"\"Return a formatted description of this factory.\"\"\"\n",
+    "        return self._doc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3dfe7144-47bd-4e6a-aed7-50cd7e7b236e",
    "metadata": {},
    "source": [
@@ -462,15 +504,18 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class UtilityFactory(Generic[T]):\n",
+    "class UtilityFactory(BaseFactory, Generic[T]):\n",
     "    \"\"\"Factory for creating utility instances with fluent API.\"\"\"\n",
     "    \n",
     "    def __init__(\n",
     "        self,\n",
     "        utility_class: type[T],  # The utility class to instantiate\n",
-    "        prefix: str  # The prefix to use for the utilities\n",
+    "        prefix: str,  # The prefix to use for the utilities\n",
+    "        doc: Optional[str] = None  # Optional documentation string\n",
     "    ):\n",
     "        \"Initialize factory with a utility class and prefix.\"\n",
+    "        doc = doc or f\"Factory for {prefix} utilities\"\n",
+    "        super().__init__(doc)\n",
     "        self.utility_class = utility_class\n",
     "        self.prefix = prefix\n",
     "    \n",
@@ -618,7 +663,7 @@
    "source": [
     "#| export\n",
     "def combine_classes(\n",
-    "    *args: Union[str, BaseUtility, TailwindBuilder, None]\n",
+    "    *args: Union[str, BaseUtility, TailwindBuilder, BaseFactory, None]\n",
     ") -> str:  # Space-separated class string\n",
     "    \"Combine multiple class builders or strings into a single class string.\"\n",
     "    classes = []\n",
@@ -629,6 +674,8 @@
     "            if arg.strip():  # Only add non-empty strings\n",
     "                classes.append(arg.strip())\n",
     "        elif isinstance(arg, BaseUtility):\n",
+    "            classes.append(str(arg))\n",
+    "        elif isinstance(arg, SingleValueFactory):\n",
     "            classes.append(str(arg))\n",
     "        elif hasattr(arg, 'build'):\n",
     "            classes.append(arg.build())\n",
@@ -659,6 +706,89 @@
     "    \"items-center\"\n",
     ")\n",
     "assert result == \"w-4 h-full flex items-center\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b04e4c7-e2bc-457d-a7bf-fa5ac95f8824",
+   "metadata": {},
+   "source": [
+    "## Single Value Factory\n",
+    "\n",
+    "A factory for standalone utility class strings:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "wy3qbtcu1k",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class SingleValueFactory(BaseFactory):\n",
+    "    \"\"\"Factory for a single utility class string with documentation.\"\"\"\n",
+    "    \n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        value: str,  # The utility class string (e.g., \"container\")\n",
+    "        doc: str  # Documentation describing what this utility does\n",
+    "    ):\n",
+    "        \"\"\"Initialize with a value and documentation.\"\"\"\n",
+    "        super().__init__(doc)\n",
+    "        self._value = value\n",
+    "    \n",
+    "    def __str__(\n",
+    "        self\n",
+    "    ) -> str:  # The utility class string\n",
+    "        \"\"\"Return the utility class string.\"\"\"\n",
+    "        return self._value\n",
+    "    \n",
+    "    def __call__(\n",
+    "        self\n",
+    "    ) -> str:  # The utility class string\n",
+    "        \"\"\"Return the utility class string when called.\"\"\"\n",
+    "        return self._value\n",
+    "    \n",
+    "    def build(\n",
+    "        self\n",
+    "    ) -> str:  # The utility class string\n",
+    "        \"\"\"Build and return the utility class string.\"\"\"\n",
+    "        return self._value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "oso4pou8w1q",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ SingleValueFactory tests passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test SingleValueFactory\n",
+    "container = SingleValueFactory(\n",
+    "    \"container\", \n",
+    "    \"Responsive container with breakpoint-based max-widths\"\n",
+    ")\n",
+    "\n",
+    "# Test various ways to use it\n",
+    "assert str(container) == \"container\"\n",
+    "assert container() == \"container\"\n",
+    "assert container.build() == \"container\"\n",
+    "assert container.describe() == \"Responsive container with breakpoint-based max-widths\"\n",
+    "\n",
+    "# Test in combine_classes\n",
+    "result = combine_classes(container, \"mx-auto\", \"px-4\")\n",
+    "assert result == \"container mx-auto px-4\"\n",
+    "\n",
+    "print(\"✅ SingleValueFactory tests passed!\")"
    ]
   },
   {
