--- a/nbs/utilities/flexbox_and_grid.ipynb
+++ b/nbs/utilities/flexbox_and_grid.ipynb
@@ -44,7 +44,7 @@
     "from cjm_fasthtml_tailwind.core.base import (\n",
     "    TailwindScale, combine_classes, StandardUtility, UtilityFactory,\n",
     "    is_numeric_scale, is_fraction, is_custom_property, is_arbitrary_value,\n",
-    "    CONTAINER_SCALES\n",
+    "    CONTAINER_SCALES, SingleValueFactory, BaseFactory\n",
     ")\n",
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    ScaledFactory, DirectionalScaledFactory, ScaleConfig, \n",
@@ -83,7 +83,7 @@
     ")\n",
     "\n",
     "# Create flex basis factory\n",
-    "basis = ScaledFactory(\"basis\", FLEX_BASIS_CONFIG) # The flex basis factory"
+    "basis = ScaledFactory(\"basis\", FLEX_BASIS_CONFIG, \"Flex basis utilities for controlling the initial size of flex items\") # The flex basis factory"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "}\n",
     "\n",
     "# Create flex direction factory\n",
-    "flex_direction = SimpleFactory(FLEX_DIRECTION_VALUES) # The flex direction factory"
+    "flex_direction = SimpleFactory(FLEX_DIRECTION_VALUES, \"Flex direction utilities for controlling the direction of flex items\") # The flex direction factory"
    ]
   },
   {
@@ -194,7 +194,7 @@
     "}\n",
     "\n",
     "# Create flex wrap factory\n",
-    "flex_wrap = SimpleFactory(FLEX_WRAP_VALUES) # The flex wrap factory"
+    "flex_wrap = SimpleFactory(FLEX_WRAP_VALUES, \"Flex wrap utilities for controlling how flex items wrap\") # The flex wrap factory"
    ]
   },
   {
@@ -248,7 +248,7 @@
     ")\n",
     "\n",
     "# Create flex factory\n",
-    "flex = ScaledFactory(\"flex\", FLEX_CONFIG) # The flex factory"
+    "flex = ScaledFactory(\"flex\", FLEX_CONFIG, \"Flex utilities for controlling how flex items both grow and shrink\") # The flex factory"
    ]
   },
   {
@@ -307,6 +307,10 @@
     "class GrowFactory(ScaledFactory):\n",
     "    \"\"\"Special factory for grow that defaults to grow-1 when called without args.\"\"\"\n",
     "    \n",
+    "    def __init__(self):\n",
+    "        \"Initialize with grow configuration and documentation.\"\n",
+    "        super().__init__(\"grow\", FLEX_GROW_CONFIG, \"Flex grow utilities for controlling how flex items grow\")\n",
+    "    \n",
     "    def __call__(\n",
     "        self,\n",
     "        value: Optional[TailwindScale] = None  # The grow value (defaults to 1 if None)\n",
@@ -318,7 +322,7 @@
     "        return super().__call__(value)\n",
     "\n",
     "# Create flex grow factory\n",
-    "grow = GrowFactory(\"grow\", FLEX_GROW_CONFIG) # The flex grow factory"
+    "grow = GrowFactory() # The flex grow factory"
    ]
   },
   {
@@ -375,6 +379,10 @@
     "class ShrinkFactory(ScaledFactory):\n",
     "    \"\"\"Special factory for shrink that defaults to shrink-1 when called without args.\"\"\"\n",
     "    \n",
+    "    def __init__(self):\n",
+    "        \"Initialize with shrink configuration and documentation.\"\n",
+    "        super().__init__(\"shrink\", FLEX_SHRINK_CONFIG, \"Flex shrink utilities for controlling how flex items shrink\")\n",
+    "    \n",
     "    def __call__(\n",
     "        self,\n",
     "        value: Optional[TailwindScale] = None  # The shrink value (defaults to 1 if None)\n",
@@ -386,7 +394,7 @@
     "        return super().__call__(value)\n",
     "\n",
     "# Create flex shrink factory\n",
-    "shrink = ShrinkFactory(\"shrink\", FLEX_SHRINK_CONFIG) # The flex shrink factory"
+    "shrink = ShrinkFactory() # The flex shrink factory"
    ]
   },
   {
@@ -444,7 +452,7 @@
     ")\n",
     "\n",
     "# Create order factory\n",
-    "order = ScaledFactory(\"order\", ORDER_CONFIG) # The order factory"
+    "order = ScaledFactory(\"order\", ORDER_CONFIG, \"Order utilities for controlling the order of flex and grid items\") # The order factory"
    ]
   },
   {
@@ -507,7 +515,7 @@
     ")\n",
     "\n",
     "# Create grid columns factory\n",
-    "grid_cols = ScaledFactory(\"grid-cols\", GRID_COLS_CONFIG) # The grid columns factory"
+    "grid_cols = ScaledFactory(\"grid-cols\", GRID_COLS_CONFIG, \"Grid template columns utilities for specifying the columns in a grid layout\") # The grid columns factory"
    ]
   },
   {
@@ -566,7 +574,7 @@
     ")\n",
     "\n",
     "# Create grid rows factory\n",
-    "grid_rows = ScaledFactory(\"grid-rows\", GRID_ROWS_CONFIG) # The grid rows factory"
+    "grid_rows = ScaledFactory(\"grid-rows\", GRID_ROWS_CONFIG, \"Grid template rows utilities for specifying the rows in a grid layout\") # The grid rows factory"
    ]
   },
   {
@@ -636,9 +644,9 @@
     ")\n",
     "\n",
     "# Create grid column factories\n",
-    "col_span = ScaledFactory(\"col-span\", COL_SPAN_CONFIG) # Column span factory\n",
-    "col_start = ScaledFactory(\"col-start\", COL_START_END_CONFIG) # Column start factory\n",
-    "col_end = ScaledFactory(\"col-end\", COL_START_END_CONFIG) # Column end factory\n",
+    "col_span = ScaledFactory(\"col-span\", COL_SPAN_CONFIG, \"Column span utilities for controlling how many columns an element spans\") # Column span factory\n",
+    "col_start = ScaledFactory(\"col-start\", COL_START_END_CONFIG, \"Column start utilities for controlling where an element starts\") # Column start factory\n",
+    "col_end = ScaledFactory(\"col-end\", COL_START_END_CONFIG, \"Column end utilities for controlling where an element ends\") # Column end factory\n",
     "\n",
     "# Special factory for col-auto and arbitrary grid-column values\n",
     "class ColFactory(ScaledFactory):\n",
@@ -646,7 +654,7 @@
     "    \n",
     "    def __init__(self):\n",
     "        \"Initialize with 'col' prefix and column configuration.\"\n",
-    "        super().__init__(\"col\", COL_START_END_CONFIG)\n",
+    "        super().__init__(\"col\", COL_START_END_CONFIG, \"Grid column utilities for arbitrary grid-column values\")\n",
     "    \n",
     "    @property\n",
     "    def auto(\n",
@@ -736,9 +744,9 @@
     ")\n",
     "\n",
     "# Create grid row factories\n",
-    "row_span = ScaledFactory(\"row-span\", ROW_SPAN_CONFIG) # Row span factory\n",
-    "row_start = ScaledFactory(\"row-start\", ROW_START_END_CONFIG) # Row start factory\n",
-    "row_end = ScaledFactory(\"row-end\", ROW_START_END_CONFIG) # Row end factory\n",
+    "row_span = ScaledFactory(\"row-span\", ROW_SPAN_CONFIG, \"Row span utilities for controlling how many rows an element spans\") # Row span factory\n",
+    "row_start = ScaledFactory(\"row-start\", ROW_START_END_CONFIG, \"Row start utilities for controlling where an element starts\") # Row start factory\n",
+    "row_end = ScaledFactory(\"row-end\", ROW_START_END_CONFIG, \"Row end utilities for controlling where an element ends\") # Row end factory\n",
     "\n",
     "# Special factory for row-auto and arbitrary grid-row values\n",
     "class RowFactory(ScaledFactory):\n",
@@ -746,7 +754,7 @@
     "    \n",
     "    def __init__(self):\n",
     "        \"Initialize with 'row' prefix and row configuration.\"\n",
-    "        super().__init__(\"row\", ROW_START_END_CONFIG)\n",
+    "        super().__init__(\"row\", ROW_START_END_CONFIG, \"Grid row utilities for arbitrary grid-row values\")\n",
     "    \n",
     "    @property\n",
     "    def auto(\n",
@@ -821,7 +829,7 @@
     "}\n",
     "\n",
     "# Create grid flow factory\n",
-    "grid_flow = SimpleFactory(GRID_FLOW_VALUES) # The grid flow factory"
+    "grid_flow = SimpleFactory(GRID_FLOW_VALUES, \"Grid auto flow utilities for controlling how elements in a grid are auto-placed\") # The grid flow factory"
    ]
   },
   {
@@ -881,6 +889,10 @@
     "class AutoColsFactory(SimpleFactory):\n",
     "    \"\"\"Factory for auto-cols with custom value support.\"\"\"\n",
     "    \n",
+    "    def __init__(self):\n",
+    "        \"Initialize with auto columns values and documentation.\"\n",
+    "        super().__init__(AUTO_COLS_VALUES, \"Grid auto columns utilities for controlling the size of implicitly-created grid columns\")\n",
+    "    \n",
     "    def __call__(\n",
     "        self,\n",
     "        value: str  # Custom auto-cols value (e.g., '200px', 'minmax(0, 1fr)')\n",
@@ -895,6 +907,10 @@
     "class AutoRowsFactory(SimpleFactory):\n",
     "    \"\"\"Factory for auto-rows with custom value support.\"\"\"\n",
     "    \n",
+    "    def __init__(self):\n",
+    "        \"Initialize with auto rows values and documentation.\"\n",
+    "        super().__init__(AUTO_ROWS_VALUES, \"Grid auto rows utilities for controlling the size of implicitly-created grid rows\")\n",
+    "    \n",
     "    def __call__(\n",
     "        self,\n",
     "        value: str  # Custom auto-rows value (e.g., '200px', 'minmax(0, 1fr)')\n",
@@ -907,8 +923,8 @@
     "        return f\"auto-rows-{value}\"\n",
     "\n",
     "# Create the factories\n",
-    "auto_cols = AutoColsFactory(AUTO_COLS_VALUES) # The auto columns factory\n",
-    "auto_rows = AutoRowsFactory(AUTO_ROWS_VALUES) # The auto rows factory"
+    "auto_cols = AutoColsFactory() # The auto columns factory\n",
+    "auto_rows = AutoRowsFactory() # The auto rows factory"
    ]
   },
   {
@@ -959,16 +975,17 @@
     "#| export\n",
     "# Create gap factory similar to SpaceFactory in spacing.ipynb\n",
     "# Note: gap utilities use a hyphenated prefix pattern\n",
-    "class GapFactory:\n",
+    "class GapFactory(BaseFactory):\n",
     "    \"\"\"Special factory for gap utilities that use hyphenated directions.\"\"\"\n",
     "    \n",
     "    def __init__(self):\n",
     "        \"Initialize with base gap and directional gap factories.\"\n",
+    "        super().__init__(\"Gap utilities for controlling gutters between grid and flexbox items\")\n",
     "        # Base gap utility\n",
-    "        self._base = ScaledFactory(\"gap\", SPACING_CONFIG)\n",
+    "        self._base = ScaledFactory(\"gap\", SPACING_CONFIG, \"Gap utilities for controlling gutters between grid and flexbox items\")\n",
     "        # Directional gap utilities with hyphens\n",
-    "        self.x = ScaledFactory(\"gap-x\", SPACING_CONFIG)\n",
-    "        self.y = ScaledFactory(\"gap-y\", SPACING_CONFIG)\n",
+    "        self.x = ScaledFactory(\"gap-x\", SPACING_CONFIG, \"Column gap utilities for controlling gutters between columns\")\n",
+    "        self.y = ScaledFactory(\"gap-y\", SPACING_CONFIG, \"Row gap utilities for controlling gutters between rows\")\n",
     "    \n",
     "    def __call__(\n",
     "        self,\n",
@@ -1051,7 +1068,7 @@
     "}\n",
     "\n",
     "# Create justify content factory\n",
-    "justify = SimpleFactory(JUSTIFY_CONTENT_VALUES) # The justify content factory"
+    "justify = SimpleFactory(JUSTIFY_CONTENT_VALUES, \"Justify content utilities for positioning flex/grid items along container's main axis\") # The justify content factory"
    ]
   },
   {
@@ -1083,7 +1100,7 @@
     "}\n",
     "\n",
     "# Create justify items factory\n",
-    "justify_items = SimpleFactory(JUSTIFY_ITEMS_VALUES) # The justify items factory"
+    "justify_items = SimpleFactory(JUSTIFY_ITEMS_VALUES, \"Justify items utilities for aligning grid items along their inline axis\") # The justify items factory"
    ]
   },
   {
@@ -1115,7 +1132,7 @@
     "}\n",
     "\n",
     "# Create justify self factory\n",
-    "justify_self = SimpleFactory(JUSTIFY_SELF_VALUES) # The justify self factory"
+    "justify_self = SimpleFactory(JUSTIFY_SELF_VALUES, \"Justify self utilities for aligning individual grid items along their inline axis\") # The justify self factory"
    ]
   },
   {
@@ -1175,7 +1192,7 @@
     "}\n",
     "\n",
     "# Create align content factory\n",
-    "content = SimpleFactory(ALIGN_CONTENT_VALUES) # The align content factory"
+    "content = SimpleFactory(ALIGN_CONTENT_VALUES, \"Align content utilities for positioning rows in multi-row flex/grid containers\") # The align content factory"
    ]
   },
   {
@@ -1208,7 +1225,7 @@
     "}\n",
     "\n",
     "# Create align items factory\n",
-    "items = SimpleFactory(ALIGN_ITEMS_VALUES) # The align items factory"
+    "items = SimpleFactory(ALIGN_ITEMS_VALUES, \"Align items utilities for positioning flex/grid items along container's cross axis\") # The align items factory"
    ]
   },
   {
@@ -1242,7 +1259,7 @@
     "}\n",
     "\n",
     "# Create align self factory\n",
-    "self_align = SimpleFactory(ALIGN_SELF_VALUES) # The align self factory (renamed to avoid conflict with Python's self)"
+    "self_align = SimpleFactory(ALIGN_SELF_VALUES, \"Align self utilities for positioning individual flex/grid items along container's cross axis\") # The align self factory (renamed to avoid conflict with Python's self)"
    ]
   },
   {
@@ -1304,7 +1321,7 @@
     "}\n",
     "\n",
     "# Create place content factory\n",
-    "place_content = SimpleFactory(PLACE_CONTENT_VALUES) # The place content factory"
+    "place_content = SimpleFactory(PLACE_CONTENT_VALUES, \"Place content utilities for aligning content both horizontally and vertically\") # The place content factory"
    ]
   },
   {
@@ -1336,7 +1353,7 @@
     "}\n",
     "\n",
     "# Create place items factory\n",
-    "place_items = SimpleFactory(PLACE_ITEMS_VALUES) # The place items factory"
+    "place_items = SimpleFactory(PLACE_ITEMS_VALUES, \"Place items utilities for aligning items both horizontally and vertically\") # The place items factory"
    ]
   },
   {
@@ -1368,7 +1385,7 @@
     "}\n",
     "\n",
     "# Create place self factory\n",
-    "place_self = SimpleFactory(PLACE_SELF_VALUES) # The place self factory"
+    "place_self = SimpleFactory(PLACE_SELF_VALUES, \"Place self utilities for aligning individual items both horizontally and vertically\") # The place self factory"
    ]
   },
   {
@@ -1613,6 +1630,54 @@
     "\n",
     "# Run the tests\n",
     "test_flexbox_and_grid_helper_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5mepqpu4jp5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def test_flexbox_and_grid_factory_documentation():\n",
+    "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
+    "    # Test factory documentation\n",
+    "    assert basis.describe() == \"Flex basis utilities for controlling the initial size of flex items\"\n",
+    "    assert flex_direction.describe() == \"Flex direction utilities for controlling the direction of flex items\"\n",
+    "    assert flex_wrap.describe() == \"Flex wrap utilities for controlling how flex items wrap\"\n",
+    "    assert flex.describe() == \"Flex utilities for controlling how flex items both grow and shrink\"\n",
+    "    assert grow.describe() == \"Flex grow utilities for controlling how flex items grow\"\n",
+    "    assert shrink.describe() == \"Flex shrink utilities for controlling how flex items shrink\"\n",
+    "    assert order.describe() == \"Order utilities for controlling the order of flex and grid items\"\n",
+    "    \n",
+    "    # Grid utilities\n",
+    "    assert grid_cols.describe() == \"Grid template columns utilities for specifying the columns in a grid layout\"\n",
+    "    assert grid_rows.describe() == \"Grid template rows utilities for specifying the rows in a grid layout\"\n",
+    "    assert col_span.describe() == \"Column span utilities for controlling how many columns an element spans\"\n",
+    "    assert row_span.describe() == \"Row span utilities for controlling how many rows an element spans\"\n",
+    "    assert grid_flow.describe() == \"Grid auto flow utilities for controlling how elements in a grid are auto-placed\"\n",
+    "    assert auto_cols.describe() == \"Grid auto columns utilities for controlling the size of implicitly-created grid columns\"\n",
+    "    assert auto_rows.describe() == \"Grid auto rows utilities for controlling the size of implicitly-created grid rows\"\n",
+    "    \n",
+    "    # Gap utilities\n",
+    "    assert gap.describe() == \"Gap utilities for controlling gutters between grid and flexbox items\"\n",
+    "    assert gap.x.describe() == \"Column gap utilities for controlling gutters between columns\"\n",
+    "    assert gap.y.describe() == \"Row gap utilities for controlling gutters between rows\"\n",
+    "    \n",
+    "    # Alignment utilities\n",
+    "    assert justify.describe() == \"Justify content utilities for positioning flex/grid items along container's main axis\"\n",
+    "    assert justify_items.describe() == \"Justify items utilities for aligning grid items along their inline axis\"\n",
+    "    assert justify_self.describe() == \"Justify self utilities for aligning individual grid items along their inline axis\"\n",
+    "    assert content.describe() == \"Align content utilities for positioning rows in multi-row flex/grid containers\"\n",
+    "    assert items.describe() == \"Align items utilities for positioning flex/grid items along container's cross axis\"\n",
+    "    assert self_align.describe() == \"Align self utilities for positioning individual flex/grid items along container's cross axis\"\n",
+    "    assert place_content.describe() == \"Place content utilities for aligning content both horizontally and vertically\"\n",
+    "    assert place_items.describe() == \"Place items utilities for aligning items both horizontally and vertically\"\n",
+    "    assert place_self.describe() == \"Place self utilities for aligning individual items both horizontally and vertically\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_flexbox_and_grid_factory_documentation()"
    ]
   },
   {
