--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -43,7 +43,8 @@
     "from dataclasses import dataclass\n",
     "from cjm_fasthtml_tailwind.core.base import (\n",
     "    TailwindScale, combine_classes, StandardUtility, UtilityFactory,\n",
-    "    is_numeric_scale, is_fraction, is_custom_property, is_arbitrary_value\n",
+    "    is_numeric_scale, is_fraction, is_custom_property, is_arbitrary_value,\n",
+    "    BaseFactory, SingleValueFactory\n",
     ")\n",
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    ScaledFactory, DirectionalScaledFactory, ScaleConfig, INSET_CONFIG,\n",
@@ -94,11 +95,11 @@
     "    \"none\": \"none\"\n",
     "}\n",
     "\n",
-    "display_tw = SimpleFactory(DISPLAY_VALUES) # The display factory\n",
+    "display_tw = SimpleFactory(DISPLAY_VALUES, \"Display utilities for controlling the display box type of an element\") # The display factory\n",
     "\n",
     "# Special display utilities\n",
-    "sr_only = \"sr-only\"  # Screen reader only\n",
-    "not_sr_only = \"not-sr-only\"  # Not screen reader only"
+    "sr_only = SingleValueFactory(\"sr-only\", \"Hide element visually but keep it available to screen readers\")\n",
+    "not_sr_only = SingleValueFactory(\"not-sr-only\", \"Undo sr-only, making element visible again\")"
    ]
   },
   {
@@ -125,8 +126,8 @@
     "    assert display_tw.table_cell == \"table-cell\"\n",
     "    \n",
     "    # Special utilities\n",
-    "    assert sr_only == \"sr-only\"\n",
-    "    assert not_sr_only == \"not-sr-only\"\n",
+    "    assert str(sr_only) == \"sr-only\"\n",
+    "    assert str(not_sr_only) == \"not-sr-only\"\n",
     "\n",
     "# Run the tests\n",
     "test_layout_display_examples()"
@@ -158,7 +159,7 @@
     "    \"sticky\": \"sticky\"\n",
     "}\n",
     "\n",
-    "position = SimpleFactory(POSITION_VALUES) # The position factory"
+    "position = SimpleFactory(POSITION_VALUES, \"Position utilities for controlling how an element is positioned in the document\") # The position factory"
    ]
   },
   {
@@ -201,7 +202,7 @@
    "source": [
     "#| export\n",
     "# For inset, we need special handling because it uses hyphens in directional variants\n",
-    "class InsetDirectionalFactory:\n",
+    "class InsetDirectionalFactory(BaseFactory):\n",
     "    \"\"\"Special factory for inset utilities that use hyphenated directions.\"\"\"\n",
     "    \n",
     "    def __init__(\n",
@@ -210,12 +211,13 @@
     "        config: ScaleConfig  # Configuration defining valid scales and values\n",
     "    ):\n",
     "        \"Initialize with prefix and scale configuration.\"\n",
+    "        super().__init__(\"Inset utilities for controlling the placement of positioned elements\")\n",
     "        self.prefix = prefix\n",
     "        self.config = config\n",
     "        \n",
     "        # Create direction-specific factories with hyphens\n",
-    "        self.x = ScaledFactory(f\"{prefix}-x\", config)  # horizontal\n",
-    "        self.y = ScaledFactory(f\"{prefix}-y\", config)  # vertical\n",
+    "        self.x = ScaledFactory(f\"{prefix}-x\", config, \"Horizontal inset utilities\")  # horizontal\n",
+    "        self.y = ScaledFactory(f\"{prefix}-y\", config, \"Vertical inset utilities\")  # vertical\n",
     "    \n",
     "    def __call__(\n",
     "        self,\n",
@@ -243,12 +245,12 @@
     "inset = InsetDirectionalFactory(\"inset\", INSET_CONFIG) # The inset factory for positioning\n",
     "\n",
     "# Individual direction utilities don't need special handling\n",
-    "top = ScaledFactory(\"top\", INSET_CONFIG) # The top factory\n",
-    "right = ScaledFactory(\"right\", INSET_CONFIG) # The right factory\n",
-    "bottom = ScaledFactory(\"bottom\", INSET_CONFIG) # The bottom factory\n",
-    "left = ScaledFactory(\"left\", INSET_CONFIG) # The left factory\n",
-    "start = ScaledFactory(\"start\", INSET_CONFIG) # The start factory (logical)\n",
-    "end = ScaledFactory(\"end\", INSET_CONFIG) # The end factory (logical)"
+    "top = ScaledFactory(\"top\", INSET_CONFIG, \"Top position utilities for controlling vertical placement\")\n",
+    "right = ScaledFactory(\"right\", INSET_CONFIG, \"Right position utilities for controlling horizontal placement\")\n",
+    "bottom = ScaledFactory(\"bottom\", INSET_CONFIG, \"Bottom position utilities for controlling vertical placement\")\n",
+    "left = ScaledFactory(\"left\", INSET_CONFIG, \"Left position utilities for controlling horizontal placement\")\n",
+    "start = ScaledFactory(\"start\", INSET_CONFIG, \"Logical start position utilities (left in LTR, right in RTL)\")\n",
+    "end = ScaledFactory(\"end\", INSET_CONFIG, \"Logical end position utilities (right in LTR, left in RTL)\")"
    ]
   },
   {
@@ -303,11 +305,12 @@
     "#| export\n",
     "OVERFLOW_VALUES = [\"auto\", \"hidden\", \"clip\", \"visible\", \"scroll\"] # Overflow values\n",
     "\n",
-    "class OverflowFactory:\n",
+    "class OverflowFactory(BaseFactory):\n",
     "    \"\"\"Factory for overflow utilities with directional support.\"\"\"\n",
     "    \n",
     "    def __init__(self):\n",
     "        \"Initialize with overflow values and directional sub-factories.\"\n",
+    "        super().__init__(\"Overflow utilities for controlling how an element handles content that is too large\")\n",
     "        # Create base overflow utilities\n",
     "        self._values = {value: f\"overflow-{value}\" for value in OVERFLOW_VALUES}\n",
     "        \n",
@@ -387,7 +390,7 @@
     ")\n",
     "\n",
     "# Create z-index factory\n",
-    "z = ScaledFactory(\"z\", Z_INDEX_CONFIG) # The z-index factory"
+    "z = ScaledFactory(\"z\", Z_INDEX_CONFIG, \"Z-index utilities for controlling the stack order of an element\") # The z-index factory"
    ]
   },
   {
@@ -451,7 +454,7 @@
     "        \"Get float utility by attribute name.\"\n",
     "        return super().__getattr__(name)\n",
     "\n",
-    "float_tw = FloatFactory(FLOAT_VALUES)  # Renamed to avoid conflict with Python's float"
+    "float_tw = FloatFactory(FLOAT_VALUES, \"Float utilities for controlling the wrapping of content around an element\")  # Renamed to avoid conflict with Python's float"
    ]
   },
   {
@@ -483,7 +486,7 @@
     "}\n",
     "\n",
     "# Create clear factory\n",
-    "clear = SimpleFactory(CLEAR_VALUES) # The clear factory"
+    "clear = SimpleFactory(CLEAR_VALUES, \"Clear utilities for controlling wrapping behavior after floating elements\") # The clear factory"
    ]
   },
   {
@@ -543,7 +546,7 @@
     "}\n",
     "\n",
     "# Create object fit factory\n",
-    "object_fit = SimpleFactory(OBJECT_FIT_VALUES) # The object fit factory"
+    "object_fit = SimpleFactory(OBJECT_FIT_VALUES, \"Object fit utilities for controlling how replaced element content should be resized\") # The object fit factory"
    ]
   },
   {
@@ -593,7 +596,10 @@
     "        return f\"object-{value}\"\n",
     "\n",
     "# Create object position factory\n",
-    "object_position = ObjectPositionFactory(OBJECT_POSITION_VALUES) # The object position factory"
+    "object_position = ObjectPositionFactory(\n",
+    "    OBJECT_POSITION_VALUES, \n",
+    "    \"Object position utilities for controlling content positioning within its container\"\n",
+    ") # The object position factory"
    ]
   },
   {
@@ -650,7 +656,7 @@
     "}\n",
     "\n",
     "# Create visibility factory\n",
-    "visibility = SimpleFactory(VISIBILITY_VALUES) # The visibility factory"
+    "visibility = SimpleFactory(VISIBILITY_VALUES, \"Visibility utilities for controlling the visibility of an element\") # The visibility factory"
    ]
   },
   {
@@ -678,7 +684,7 @@
     "}\n",
     "\n",
     "# Create box sizing factory\n",
-    "box = SimpleFactory(BOX_SIZING_VALUES) # The box sizing factory"
+    "box = SimpleFactory(BOX_SIZING_VALUES, \"Box sizing utilities for controlling how the browser calculates element size\") # The box sizing factory"
    ]
   },
   {
@@ -729,7 +735,7 @@
     "}\n",
     "\n",
     "# Create isolation factory\n",
-    "isolation = SimpleFactory(ISOLATION_VALUES) # The isolation factory"
+    "isolation = SimpleFactory(ISOLATION_VALUES, \"Isolation utilities for creating a new stacking context\") # The isolation factory"
    ]
   },
   {
@@ -778,7 +784,7 @@
     "        return f\"aspect-{value}\"\n",
     "\n",
     "# Create aspect ratio factory\n",
-    "aspect = AspectRatioFactory(ASPECT_RATIO_VALUES) # The aspect ratio factory"
+    "aspect = AspectRatioFactory(ASPECT_RATIO_VALUES, \"Aspect ratio utilities for controlling element proportions\") # The aspect ratio factory"
    ]
   },
   {
@@ -835,7 +841,7 @@
     ")\n",
     "\n",
     "# Create columns factory\n",
-    "columns = ScaledFactory(\"columns\", COLUMNS_CONFIG) # The columns factory"
+    "columns = ScaledFactory(\"columns\", COLUMNS_CONFIG, \"Columns utilities for controlling the number of columns within an element\") # The columns factory"
    ]
   },
   {
@@ -915,14 +921,15 @@
     "}\n",
     "\n",
     "# Create break factories with sub-properties\n",
-    "class BreakFactory:\n",
+    "class BreakFactory(BaseFactory):\n",
     "    \"\"\"Factory for break utilities with before, after, and inside sub-factories.\"\"\"\n",
     "    \n",
     "    def __init__(self):\n",
     "        \"Initialize with sub-factories for before, after, and inside breaks.\"\n",
-    "        self.before = SimpleFactory(BREAK_BEFORE_VALUES)\n",
-    "        self.after = SimpleFactory(BREAK_AFTER_VALUES)\n",
-    "        self.inside = SimpleFactory(BREAK_INSIDE_VALUES)\n",
+    "        super().__init__(\"Break utilities for controlling column and page breaks\")\n",
+    "        self.before = SimpleFactory(BREAK_BEFORE_VALUES, \"Break-before utilities for controlling breaks before an element\")\n",
+    "        self.after = SimpleFactory(BREAK_AFTER_VALUES, \"Break-after utilities for controlling breaks after an element\")\n",
+    "        self.inside = SimpleFactory(BREAK_INSIDE_VALUES, \"Break-inside utilities for controlling breaks within an element\")\n",
     "\n",
     "# Create the break factory\n",
     "break_util = BreakFactory() # The break factory"
@@ -953,7 +960,10 @@
     "}\n",
     "\n",
     "# Create box decoration factory\n",
-    "box_decoration = SimpleFactory(BOX_DECORATION_VALUES) # The box decoration factory"
+    "box_decoration = SimpleFactory(\n",
+    "    BOX_DECORATION_VALUES, \n",
+    "    \"Box decoration break utilities for controlling element fragment rendering across breaks\"\n",
+    ") # The box decoration factory"
    ]
   },
   {
@@ -977,11 +987,12 @@
     "# Overscroll behavior values\n",
     "OVERSCROLL_VALUES = [\"auto\", \"contain\", \"none\"]\n",
     "\n",
-    "class OverscrollFactory:\n",
+    "class OverscrollFactory(BaseFactory):\n",
     "    \"\"\"Factory for overscroll behavior utilities with directional support.\"\"\"\n",
     "    \n",
     "    def __init__(self):\n",
     "        \"Initialize with overscroll values and directional sub-factories.\"\n",
+    "        super().__init__(\"Overscroll behavior utilities for controlling browser behavior at scroll boundaries\")\n",
     "        # Create base overscroll utilities\n",
     "        self._values = {value: f\"overscroll-{value}\" for value in OVERSCROLL_VALUES}\n",
     "        \n",
@@ -1102,6 +1113,43 @@
     "\n",
     "# Run the tests\n",
     "test_layout_practical_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "li95e4biwp8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def test_layout_factory_documentation():\n",
+    "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
+    "    # Test factory documentation\n",
+    "    assert display_tw.describe() == \"Display utilities for controlling the display box type of an element\"\n",
+    "    assert position.describe() == \"Position utilities for controlling how an element is positioned in the document\"\n",
+    "    assert inset.describe() == \"Inset utilities for controlling the placement of positioned elements\"\n",
+    "    assert overflow.describe() == \"Overflow utilities for controlling how an element handles content that is too large\"\n",
+    "    assert z.describe() == \"Z-index utilities for controlling the stack order of an element\"\n",
+    "    assert float_tw.describe() == \"Float utilities for controlling the wrapping of content around an element\"\n",
+    "    assert clear.describe() == \"Clear utilities for controlling wrapping behavior after floating elements\"\n",
+    "    assert object_fit.describe() == \"Object fit utilities for controlling how replaced element content should be resized\"\n",
+    "    assert object_position.describe() == \"Object position utilities for controlling content positioning within its container\"\n",
+    "    assert visibility.describe() == \"Visibility utilities for controlling the visibility of an element\"\n",
+    "    assert box.describe() == \"Box sizing utilities for controlling how the browser calculates element size\"\n",
+    "    assert isolation.describe() == \"Isolation utilities for creating a new stacking context\"\n",
+    "    assert aspect.describe() == \"Aspect ratio utilities for controlling element proportions\"\n",
+    "    assert columns.describe() == \"Columns utilities for controlling the number of columns within an element\"\n",
+    "    assert break_util.describe() == \"Break utilities for controlling column and page breaks\"\n",
+    "    assert box_decoration.describe() == \"Box decoration break utilities for controlling element fragment rendering across breaks\"\n",
+    "    assert overscroll.describe() == \"Overscroll behavior utilities for controlling browser behavior at scroll boundaries\"\n",
+    "    \n",
+    "    # Test SingleValueFactory documentation\n",
+    "    assert sr_only.describe() == \"Hide element visually but keep it available to screen readers\"\n",
+    "    assert not_sr_only.describe() == \"Undo sr-only, making element visible again\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_layout_factory_documentation()"
    ]
   },
   {
