--- a/nbs/utilities/sizing.ipynb
+++ b/nbs/utilities/sizing.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "#| export\n",
     "from typing import Optional, Union\n",
-    "from cjm_fasthtml_tailwind.core.base import TailwindScale, combine_classes\n",
+    "from cjm_fasthtml_tailwind.core.base import TailwindScale, combine_classes, SingleValueFactory\n",
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    ScaledFactory, SIZE_CONFIG, ScaleConfig\n",
     ")"
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "w = ScaledFactory(\"w\", SIZE_CONFIG) # The width factory"
+    "w = ScaledFactory(\"w\", SIZE_CONFIG, \"Width utilities for setting element width\") # The width factory"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "h = ScaledFactory(\"h\", SIZE_CONFIG) # The height factory"
+    "h = ScaledFactory(\"h\", SIZE_CONFIG, \"Height utilities for setting element height\") # The height factory"
    ]
   },
   {
@@ -328,7 +328,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "min_w = ScaledFactory(\"min-w\", SIZE_CONFIG) # The min-width factory"
+    "min_w = ScaledFactory(\"min-w\", SIZE_CONFIG, \"Minimum width utilities for setting minimum element width\") # The min-width factory"
    ]
   },
   {
@@ -381,7 +381,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "max_w = ScaledFactory(\"max-w\", SIZE_CONFIG) # The max-width factory"
+    "max_w = ScaledFactory(\"max-w\", SIZE_CONFIG, \"Maximum width utilities for setting maximum element width\") # The max-width factory"
    ]
   },
   {
@@ -428,7 +428,10 @@
    "source": [
     "#| export\n",
     "# Container utility\n",
-    "container = \"container\"  # Responsive container with breakpoint-based max-widths"
+    "container = SingleValueFactory(\n",
+    "    \"container\",\n",
+    "    \"Responsive container with breakpoint-based max-widths\"\n",
+    ")"
    ]
   },
   {
@@ -449,7 +452,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "min_h = ScaledFactory(\"min-h\", SIZE_CONFIG) # The min-height factory"
+    "min_h = ScaledFactory(\"min-h\", SIZE_CONFIG, \"Minimum height utilities for setting minimum element height\") # The min-height factory"
    ]
   },
   {
@@ -498,7 +501,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "max_h = ScaledFactory(\"max-h\", SIZE_CONFIG) # The max-height factory"
+    "max_h = ScaledFactory(\"max-h\", SIZE_CONFIG, \"Maximum height utilities for setting maximum element height\") # The max-height factory"
    ]
   },
   {
@@ -519,7 +522,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "size_util = ScaledFactory(\"size\", SIZE_CONFIG) # The size factory (sets both width and height)"
+    "size_util = ScaledFactory(\"size\", SIZE_CONFIG, \"Size utilities for setting both width and height simultaneously\") # The size factory (sets both width and height)"
    ]
   },
   {
@@ -662,6 +665,39 @@
     "\n",
     "# Run the tests\n",
     "test_sizing_practical_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "jlwvvk024og",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def test_sizing_factory_documentation():\n",
+    "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
+    "    # Test factory documentation\n",
+    "    assert w.describe() == \"Width utilities for setting element width\"\n",
+    "    assert h.describe() == \"Height utilities for setting element height\"\n",
+    "    assert min_w.describe() == \"Minimum width utilities for setting minimum element width\"\n",
+    "    assert max_w.describe() == \"Maximum width utilities for setting maximum element width\"\n",
+    "    assert min_h.describe() == \"Minimum height utilities for setting minimum element height\"\n",
+    "    assert max_h.describe() == \"Maximum height utilities for setting maximum element height\"\n",
+    "    assert size_util.describe() == \"Size utilities for setting both width and height simultaneously\"\n",
+    "    assert container.describe() == \"Responsive container with breakpoint-based max-widths\"\n",
+    "    \n",
+    "    # Test that container works with combine_classes\n",
+    "    result = combine_classes(container, \"mx-auto\", \"px-4\")\n",
+    "    assert result == \"container mx-auto px-4\"\n",
+    "    \n",
+    "    # Test different ways to use container\n",
+    "    assert str(container) == \"container\"\n",
+    "    assert container() == \"container\"\n",
+    "    assert container.build() == \"container\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_sizing_factory_documentation()"
    ]
   },
   {
