--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -64,11 +64,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "p = DirectionalScaledFactory(\"p\", SPACING_CONFIG) # The padding factory\n",
+    "p = DirectionalScaledFactory(\"p\", SPACING_CONFIG, \"Padding utilities for controlling element padding\") # The padding factory\n",
     "\n",
     "# Additional directional padding utilities for logical properties\n",
-    "ps = ScaledFactory(\"ps\", SPACING_CONFIG)  # padding-inline-start\n",
-    "pe = ScaledFactory(\"pe\", SPACING_CONFIG)  # padding-inline-end"
+    "ps = ScaledFactory(\"ps\", SPACING_CONFIG, \"Padding inline-start utilities (logical property)\")  # padding-inline-start\n",
+    "pe = ScaledFactory(\"pe\", SPACING_CONFIG, \"Padding inline-end utilities (logical property)\")  # padding-inline-end"
    ]
   },
   {
@@ -190,11 +190,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "m = DirectionalScaledFactory(\"m\", SPACING_CONFIG) # The margin factory\n",
+    "m = DirectionalScaledFactory(\"m\", SPACING_CONFIG, \"Margin utilities for controlling element margin\") # The margin factory\n",
     "\n",
     "# Additional directional margin utilities for logical properties\n",
-    "ms = ScaledFactory(\"ms\", SPACING_CONFIG)  # margin-inline-start\n",
-    "me = ScaledFactory(\"me\", SPACING_CONFIG)  # margin-inline-end"
+    "ms = ScaledFactory(\"ms\", SPACING_CONFIG, \"Margin inline-start utilities (logical property)\")  # margin-inline-start\n",
+    "me = ScaledFactory(\"me\", SPACING_CONFIG, \"Margin inline-end utilities (logical property)\")  # margin-inline-end"
    ]
   },
   {
@@ -351,21 +351,22 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "from cjm_fasthtml_tailwind.core.base import BaseFactory, SingleValueFactory\n",
+    "\n",
     "# Create space between factories\n",
     "# Note: space utilities use a hyphenated prefix pattern\n",
-    "class SpaceFactory:\n",
-    "    \"\"\"Special factory for space utilities that use hyphenated directions.\"\"\"\n",
+    "class SpaceFactory(BaseFactory):\n",
+    "    \"\"\"Special factory for space utilities that control spacing between child elements.\"\"\"\n",
     "    \n",
     "    def __init__(self):\n",
-    "        \"Initialize with scaled factories.\"\n",
-    "        self.x = ScaledFactory(\"space-x\", SPACING_CONFIG)\n",
-    "        self.y = ScaledFactory(\"space-y\", SPACING_CONFIG)\n",
+    "        \"\"\"Initialize with scaled factories and reverse utilities.\"\"\"\n",
+    "        super().__init__(\"Space utilities for adding consistent spacing between child elements\")\n",
+    "        self.x = ScaledFactory(\"space-x\", SPACING_CONFIG, \"Horizontal spacing between child elements\")\n",
+    "        self.y = ScaledFactory(\"space-y\", SPACING_CONFIG, \"Vertical spacing between child elements\")\n",
+    "        self.x_reverse = SingleValueFactory(\"space-x-reverse\", \"Reverse the order of horizontal spacing\")\n",
+    "        self.y_reverse = SingleValueFactory(\"space-y-reverse\", \"Reverse the order of vertical spacing\")\n",
     "\n",
-    "space = SpaceFactory() # The space factory\n",
-    "\n",
-    "# Space reverse utilities\n",
-    "space_x_reverse = \"space-x-reverse\"  # Reverse the order of horizontal spacing\n",
-    "space_y_reverse = \"space-y-reverse\"  # Reverse the order of vertical spacing"
+    "space = SpaceFactory() # The space factory"
    ]
   },
   {
@@ -392,9 +393,9 @@
     "    assert str(space.x.negative(2)) == \"-space-x-2\"\n",
     "    assert str(space.y.negative(4)) == \"-space-y-4\"\n",
     "    \n",
-    "    # Space reverse utilities\n",
-    "    assert space_x_reverse == \"space-x-reverse\"\n",
-    "    assert space_y_reverse == \"space-y-reverse\"\n",
+    "    # Space reverse utilities using factory\n",
+    "    assert str(space.x_reverse) == \"space-x-reverse\"\n",
+    "    assert str(space.y_reverse) == \"space-y-reverse\"\n",
     "\n",
     "# Run the tests\n",
     "test_spacing_space_between_examples()"
@@ -571,6 +572,47 @@
     "\n",
     "# Run the tests\n",
     "test_spacing_helper_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bw0lktq11pl",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def test_spacing_factory_documentation():\n",
+    "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
+    "    # Test main factory documentation\n",
+    "    assert p.describe() == \"Padding utilities for controlling element padding\"\n",
+    "    assert m.describe() == \"Margin utilities for controlling element margin\"\n",
+    "    assert ps.describe() == \"Padding inline-start utilities (logical property)\"\n",
+    "    assert pe.describe() == \"Padding inline-end utilities (logical property)\"\n",
+    "    assert ms.describe() == \"Margin inline-start utilities (logical property)\"\n",
+    "    assert me.describe() == \"Margin inline-end utilities (logical property)\"\n",
+    "    \n",
+    "    # Test space factory documentation\n",
+    "    assert space.describe() == \"Space utilities for adding consistent spacing between child elements\"\n",
+    "    assert space.x.describe() == \"Horizontal spacing between child elements\"\n",
+    "    assert space.y.describe() == \"Vertical spacing between child elements\"\n",
+    "    assert space.x_reverse.describe() == \"Reverse the order of horizontal spacing\"\n",
+    "    assert space.y_reverse.describe() == \"Reverse the order of vertical spacing\"\n",
+    "    \n",
+    "    # Test directional sub-factories\n",
+    "    assert p.t.describe() == \"Top p utilities\"\n",
+    "    assert p.r.describe() == \"Right p utilities\"\n",
+    "    assert p.b.describe() == \"Bottom p utilities\"\n",
+    "    assert p.l.describe() == \"Left p utilities\"\n",
+    "    assert p.x.describe() == \"Horizontal p utilities\"\n",
+    "    assert p.y.describe() == \"Vertical p utilities\"\n",
+    "    \n",
+    "    # Verify space reverse utilities work correctly\n",
+    "    assert str(space.x_reverse) == \"space-x-reverse\"\n",
+    "    assert str(space.y_reverse) == \"space-y-reverse\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_spacing_factory_documentation()"
    ]
   },
   {
